# unicola

./: Cargo.toml  README.rst  build.rs
bindings/python/cffi/: unicola.py
bindings/python/ctypes/: unicola.py
examples/: east_asian_width.rs  emoji.rs
src/: emoji.rs  ffi.rs  lib.rs  width.rs
src/codegen/: Cargo.toml
src/codegen/src/: generator.rs  lib.rs
src/core/: Cargo.toml
src/core/src/: core.rs
